<resources>
    <string name="app_name">C-Finance</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="greetings_home">Hi, Admin!</string>
    <string name="balance_text">Balance</string>
    <string name="balance">Rp 100,000,000</string>
    <string name="income_text">Income</string>
    <string name="outcome_text">Expense</string>
    <string name="balance_income">Rp 100,000,000</string>
    <string name="balance_outcome">Rp 100,000,000</string>
    <string name="add_category">Add Category</string>
    <string name="export">Export</string>
    <string name="activity_log">User Activity Log</string>
    <string name="name_text">Name</string>
    <string name="phone_text">Phone Number</string>
    <string name="username_text">Username</string>
    <string name="greetings_users">Users</string>
    <string name="greetings_log">Users Log</string>
    <string name="greetings_cashflow">Cash Flow</string>
    <string name="add_user">Add User</string>
    <string name="add_user_button">Add User Button</string>
    <string name="category">Category</string>
    <string name="date_text">30 April 2024</string>
    <string name="type_text">Tipe</string>
    <string name="log_text">Activity Log</string>
    <string name="users">Users</string>
    <string name="cashflow">Cash Flow</string>
    <string name="log">Log</string>
    <string name="header">Header</string>
    <string name="please_select_type">Select Role</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="action">Action</string>
    <string name="update_user">Update User</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="role">Role</string>
    <string name="username_detail">Username: %1$s</string>
    <string name="phone_detail">Phone: %1$s</string>
    <string name="role_detail">Role: %1$s</string>
    <string name="newpassword">New Password</string>
    <string name="add_cashflow">Data</string>
    <string name="name">Name</string>
    <string name="income">Income</string>
    <string name="Expense">Expense</string>
    <string name="please_select_type2">Please Select Type</string>
    <string name="please_select_category">Select Category</string>
    <string name="nominal_hint">Enter Nominal</string>
    <string name="date">Date</string>
    <string name="description_hint">Enter Description</string>
    <string name="update_data">Update Data</string>
    <string name="add_data">Add Data</string>
    <string name="greetings_category">Category</string>
    <string name="nameCategory_text">Kategori</string>
    <string name="add">Add</string>
    <string name="nameCategory_hint">Enter Name</string>
    <string name="cancel">Cancel</string>
    <string name="edit_category">Edit Category</string>
    <string name="action_type">Action Type</string>
    <string name="activity_log_text">Activity Log</string>
    <string name="retry">Retry</string>
    <string name="description">Deskripsi</string>
    <string name="delete_log">Delete Log</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="greetings_manage">Management Hub</string>
    <string name="description_text">Description:</string>
    <string name="phone_text_detail">Phone Number: %1$s</string>
    <string name="month_text">Bulan</string>
    <string name="recent_transaction_text">Recently Added Transaction</string>
    <string name="show_all"><u>Show all</u></string>
    <string name="greetings_transaction">Transaction</string>
    <string name="filter_all">All</string>
    <string name="filter_income">Income</string>
    <string name="filter_expense">Expense</string>
    <string name="filter_date">Date</string>
    <string name="filtered_from_to">Filtered from %1$s to %2$s</string>
    <string name="empty_text">Nothing to see here..</string>
    <string name="filter_users">Users</string>
    <string name="filter_category">Category</string>
    <string name="search">Search</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="this_month_summary">This Month Summary</string>
</resources>