<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".view.managehub.ManageFragment">

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/cashflow"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitlePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/greetings_cashflow"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivHeader"
        app:layout_constraintStart_toEndOf="@id/ivHeader"
        app:layout_constraintTop_toTopOf="@id/ivHeader" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCashflow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/blue_lite"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/add_cashflow"
        android:textStyle="bold"
        app:icon="@drawable/add_data"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivHeader" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/blue_lite"
        android:fontFamily="@font/poppins"
        android:text="@string/export"
        android:textStyle="bold"
        app:icon="@drawable/export"
        app:iconSize="28dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/btnAddCashflow"
        app:layout_constraintTop_toBottomOf="@id/ivHeader" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3">

        <TextView
            android:id="@+id/tvTransactionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/greetings_transaction"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTransactionText"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/filterAll"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_all"
                android:textColor="@color/chip_text_color_selector"
                app:checkedIconTint="@color/chip_text_color_selector"
                app:chipBackgroundColor="@color/chip_color_selector" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterIncome"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_income"
                android:textColor="@color/chip_text_color_selector"
                app:checkedIconTint="@color/chip_text_color_selector"
                app:chipBackgroundColor="@color/chip_color_selector" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterExpense"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_expense"
                android:textColor="@color/chip_text_color_selector"
                app:checkedIconTint="@color/chip_text_color_selector"
                app:chipBackgroundColor="@color/chip_color_selector" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filterDate"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_date"
                android:textColor="@color/chip_text_color_selector"
                app:checkedIconTint="@color/chip_text_color_selector"
                app:chipBackgroundColor="@color/chip_color_selector" />

        </com.google.android.material.chip.ChipGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCashflow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupFilter"
            tools:listitem="@layout/cashflow_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3">

        <ImageView
            android:id="@+id/ivEmpty"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_text"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@id/ivEmpty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="210dp" />

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:trackColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>